# devin-space

./: README.md  package-lock.json  todo.md
backend/: copy_sample_data.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: endpoints.py  search.py
backend/app/core/: database.py
backend/app/models/: __init__.py  cluster.py  server.py
backend/app/scripts/: clear_clustering_data.py
backend/app/services/: search_service.py
backend/app/services/clustering/: __init__.py  clustering.py  entity_linking.py  optimized_clustering.py
backend/app/services/data_processor/: processor.py
backend/app/services/evaluation/: evaluation.py
backend/app/services/recommendation/: recommendation.py
backend/app/utils/: progress_manager.py
backend/data/: processing_progress.json
backend/scripts/: clean_all.py  prepare_data.py
frontend/: .env  .gitignore  package-lock.json  package.json  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.tsx  setupProxy.js  types.ts
frontend/src/components/: ClearCacheButton.tsx  ClusteringView.tsx  Dashboard.tsx  RecommendationView.tsx  ServerExplorer.tsx  ServerExplorerNew.tsx
mcp_eval/mcpso/: McpSoServerInfo_7000+_without_prices.xlsx  api_key_extractor.py  api_price_searcher.py  api_pricing_results_progress.json  eval.py  mcpso server评分表.xlsx  requirements.txt  test.py  utils.py  整理部分api key价格.py  部分api key价格.xlsx
mcp_eval/smithery/: SmitheryMcpServerInfo.xlsx  crawler_by_pages.py  export_to_excel.py  output.json  retry_failed.py  smithery-ai-cards-page-106.json  temp_output.json
(+5 files in other folders)
