[tool.poetry]
name = "mcp-analysis-system"
version = "0.1.0"
description = "A system for analyzing MCP server data"
authors = ["Devin AI"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pandas = "^2.2.0"
scikit-learn = "^1.6.0"
numpy = "^2.2.0"
spacy = "^3.8.0"
sentence-transformers = "^4.0.0"
pytest = "^8.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
