[tool.poetry]
name = "mcp-analysis-system"
version = "0.1.0"
description = "A system for analyzing MCP server data"
authors = ["Devin AI"]
packages = [
    {include = "mcp_analysis_system", from = "src"}
]
[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pandas = "^2.2.0"
scikit-learn = "^1.6.0"
numpy = "^2.2.0"
spacy = "^3.8.0"
sentence-transformers = "^4.0.0"
fuzzywuzzy = "^0.18.0"
pymongo = "^4.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
